# receipt-ocr

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
receipt_ocr/: __init__.py  cli.py  client.py  extractor.py  mcp_server.py
